--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 spring.datasource.url = jdbc:mysql://localhost:3306/Naucratis?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = Stagefovea!"#$1
 
 ## Hibernate properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -15,5 +15,5 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
 
-server.port=0
+#server.port=0  # Esto es solo cuando hay error de puerto
 
