--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 ##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
-spring.datasource.url = jdbc:mysql://localhost:3306/Naucratis?useSSL=false
-spring.datasource.username = root
+spring.datasource.url = jdbc:mysql://localhost:3306/naucratis?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username = naucratis_admin
 spring.datasource.password = Stagefovea!"#$1
 
 ## Hibernate properties
@@ -15,5 +15,6 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
 
-#server.port=0  # Esto es solo cuando hay error de puerto
+server.port=0
+#Esto es solo cuando hay error de puerto
 
