--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
 
-server.port=0
+#server.port=0
 #Esto es solo cuando hay error de puerto
 
