--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ logging.level.org.hibernate.type = TRACE
 #server.port=0
 #Esto es solo cuando hay error de puerto
 
+spring.security.user.name = admin_naucratis
+spring.security.user.password = N4uCr4t15!
+
