--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 ##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
 spring.datasource.url = jdbc:mysql://localhost:3306/naucratis?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username = root
+spring.datasource.username = naucratis_admin
 spring.datasource.password = Stagefovea!"#$1
 
 ## Hibernate properties
