--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# Editor-based Rest Client
+# Editor-based Rest Customer
 .idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
