--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 ##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
 spring.datasource.url = jdbc:mysql://localhost:3306/naucratis?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username = naucratis_admin
-spring.datasource.password = Stagefovea!"#$1
+spring.datasource.username = root
+spring.datasource.password = root
 
 ## Hibernate properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -15,9 +15,5 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
 
-#server.port=0
-#Esto es solo cuando hay error de puerto
 
-spring.security.user.name = admin_naucratis
-spring.security.user.password = N4uCr4t15!
 
