--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 spring.datasource.url = jdbc:mysql://localhost:3306/naucratis?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = assassinscreedarduino
 
 ## Hibernate properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
