--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 spring.datasource.url = jdbc:mysql://localhost:3306/naucratis?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 1234
 
 ## Hibernate properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -14,6 +14,3 @@ spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
-
-
-
