--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,18 +1,18 @@
 
 ##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:H2://mem:db;BD_CLOSE_DELAY=-1
-spring.datasource.username = sa
-spring.datasource.password = sa
-spring.datasource.driver-class-name=org.H2.Driver
+##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.datasource.url = jdbc:mysql://localhost:3306/naucratis?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username = root
+spring.datasource.password = Stagefovea!"#$1
+
+## Hibernate properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
-
-#server.port=0
-#Esto es solo cuando hay error de puerto
-
-spring.security.user.name = admin_naucratis
-spring.security.user.password = N4uCr4t15!
 
